# YA_MCPServer_Template

./: .gitignore  .sops.yaml  README.md  _test_stdio.py  config.yaml  env.yaml  pyproject.toml  server.py  test.py  test_attachment_feature.py  test_document_import.py  test_fixes.py  test_simple_fixes.py  tips.txt
core/: document_processor.py  file_parser.py  knowledge_store.py  llm_service.py  memory_store.py  rag_service.py  translate_service.py  user_profile_service.py  web_search_service.py
docs/: BUG-FIX-SUMMARY.md  QUICKSTART-DOCUMENT-IMPORT.md  demo.docx  demo.md  document-import-guide.md  encrypt.md  modules.md  web_search_guide.md  开发指南.md  操作手册.md  网络搜索测试报告.md
docs/test_knowledge/: api_design_principles.md  cloud_computing_concepts.md  git_workflow.md  machine_learning_intro.md  python_basics.md
modules/: note_manager.py
modules/YA_Common/utils/: helpers.py  logger.py
modules/YA_Secrets/: secrets_parser.py
my_notes/: hello.txt
prompts/: knowledge_prompt.py  note_templates.py
resources/: knowledge_resource.py
tools/: chat_tool.py  document_tool.py  knowledge_tool.py  memory_tool.py  qa_tool.py  translate_tool.py  web_search_tool.py
