[project]
name = "YA_MCPServer_KnowledgeAgent"
version = "0.1.0"
description = "A personalized knowledge management agent with RAG."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "art>=6.5",
    "black>=25.9.0",
    "chromadb>=0.5.0",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.14.4",
    "openai>=1.0.0",
    "ddgs>=9.0.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=2.0.0",
    "lxml>=5.0.0",
]
