[project]
name = "YA_MCPServer_KnowledgeAgent"
version = "0.1.0"
description = "A personalized knowledge management agent with RAG."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "art>=6.5",
    "beautifulsoup4>=4.12.0",
    "black>=25.9.0",
    "chromadb>=0.5.0",
    "colorlog>=6.10.1",
    "ddgs>=0.4.0",
    "html2text>=2024.2.26",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "openai>=1.0.0",
    "pypdfium2>=4.30.0",
    "pyyaml>=6.0.2",
    "ruff>=0.14.4",
]
